# MMM_project

./: .gitignore  EDA.ipynb  README.md  inference.py  pyproject.toml  train.py
config/: clusterized_transformer.yaml  dual_path.yaml  final_model.yaml  mmm.yaml  resnet_dual_path.yaml
config/dataloader/: stable.yaml
config/datasets/: geoplant.yaml  geoplant_clusterized.yaml
config/metrics/: stable.yaml
config/model/: baseline.yaml  clip_lstm.yaml  cube_baseline.yaml  dual_path.yaml  rdpca.yaml  resnet.yaml  resnet_dual_path.yaml  tabular_transformer.yaml
config/transforms/: stable.yaml
config/writer/: wandb.yaml
research/: PA_topn_baseline.ipynb  PO_clusterization.ipynb  research.ipynb
research/baselines/: single-modality-baseline-landsat-cubes.ipynb
src/: dataset_utils.py  research.ipynb
src/datasets/: __init__.py  base_dataset.py  collate.py  data_utils.py  geoplant_dataset.py  geoplant_dataset_clusterized.py
src/logger/: __init__.py  wandb.py
src/loss/: __init__.py  adaptive_k_loss.py  mixed_loss.py  multilabel_loss.py
src/metrics/: __init__.py  multilabel_metric.py  utils.py
src/models/: __init__.py  adaptive_k.py  baseline.py  clip_lstm_model.py  clip_lstm_model_v2.py  cool_model.py  cube_baseline.py  dual_path_model.py  final_model.py  mlp_baseline.py  rdpca.py  resnet_dual_path.py  tabular_transformer.py
src/models/backbones/: __init__.py  resnet.py
src/models/basic/: __init__.py  cube_baseline.py  mlp_baseline.py  resnet_fusion.py
src/models/parts/: __init__.py  (+4 more)
src/trainer/: base_trainer.py  trainer.py
src/utils/: init_utils.py
(+5 files in other folders)
