[project]
name = "geoplant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "hydra-core==1.3.2",
    "kagglehub==0.3.13",
    "matplotlib==3.10.7",
    "matplotlib-inline>=0.2.1",
    "numpy==2.3.5",
    "pandas==2.3.3",
    "torch==2.9.1",
    "torchvision==0.24.1",
    "tqdm==4.67.1",
    "wandb==0.23.0",
    "rasterio==1.4.3",
    "pillow==12.0.0",
    "omegaconf==2.3.0",
]